--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* GLOBAL VARIABLES */
+
 
 .html, body {
   background-color: rgb(240, 240, 240)
@@ -280,15 +280,14 @@
   background-color: var(--backcolor);
   border: solid var(--bordercolor) 1px;
   width: 100%;
-  height: 1300px;
-  display: flex;
-  flex-shrink: 0;
-  flex-flow: row wrap;
+  /* height: 510px; */
+  /* display: flex; */
+  /* flex-shrink: 0; */
   align-content: flex-start;
   margin: auto;
   border-radius: 15px;
-  overflow: hidden;
-  overflow-y: scroll;
+  /* overflow: hidden; */
+  overflow-x: scroll;
 }
 
 
@@ -302,9 +301,8 @@
 .menu-item{
   background-color: var(--backcolor);
   border-radius: 15px;
-  border: solid var(--bordercolor) 2px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.226);
-  width: 150px;
+  /* box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.226); */
+  width: 300px;
   height: 100px;
   margin-left: 15px;
   margin-bottom: 15px;
@@ -352,9 +350,10 @@
 }
 
 .shopping-button {
-  height: 50px;
+  height: 60px;
   width: 100px;
   border-radius: 20px;
+  
 }
 .shopping-button:hover{
   background-color: rgb(141, 192, 162);
@@ -396,3 +395,21 @@
   animation-delay: 2s;
 }
 
+.searchForm {
+  width: 100px;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0.25rem 0 0;
+  padding: 0 0.5rem 0.25rem;
+  border-bottom: 1px solid #eee
+}
+
+.searchForm label {
+  position: absolute;
+  left: -99999px;
+}
+
+.searchForm input[type='text'] {
+  flex-grow: 1;
+  max-width: 100%
+}
