--- a/src/App.css
+++ b/src/App.css
@@ -383,10 +383,9 @@
   align-content: flex-start;
   margin: auto;
   /* overflow: hidden; */
-  overflow-x: scroll;
-  margin-left: 50px;
-  margin-right: 50px;
-  height: 515px;
+  /* overflow-x: scroll; */
+  margin-left: 10%;
+  margin-right: 30%;
   color: black
 }
 
@@ -421,14 +420,19 @@
   max-width: 100%
 }
 
+.tab{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
 #addGuitar:hover{
-  background-color: #46cc56;
+  background-color: #4e9356;
   color: black;
 }
 
 .addGuitarForm {
 height: 140px;
-
+padding-top: 20px;
 }
 
 .input {
@@ -440,11 +444,11 @@ height: 140px;
   background-color: rgb(181, 197, 227)
 }
 
-.input.desc {
+.inputDesc {
   height: 300px;
-  width: 100%;
-  padding: 17px 10px;
-  line-height: 7px;
+  width: 450px;
+  padding: 10px 10px;
+  line-height: 22px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
   box-sizing: border-box;
@@ -477,7 +481,6 @@ height: 140px;
   height: 500px;
   width: 50%;
   margin: auto;
-  border: solid black 1px;
 }
 
 /* Input Form */
@@ -495,14 +498,21 @@ height: 140px;
   height: 30px;
 }
 
+#inputBoxes{
+  width: "900px";
+  display: flex;
+  flex-direction: column;
+}
+
 
 /* Collection Styles */
 
 .collectionItem {
   display: flex;
-  gap: 50px;
 }
 
 .collectionDetails {
   margin: auto;
+  font-size: 180%;
 }
+
