--- a/src/App.css
+++ b/src/App.css
@@ -280,22 +280,12 @@ body {
   margin-right: 50px;
 }
 
-.section-fade {
-  width: 60px;
-  height: 494px;
-  background-image: linear-gradient(
-    to left,
-    rgba(255, 0, 0, 0),
-    rgb(233, 233, 233)
-  );
-  position: absolute;
-}
+
 
 .section-fade-right {
   width: 600px;
   height: 494px;
-background-color: red
-  );
+
 }
 
 .menu-desc {
@@ -525,6 +515,8 @@ background-color: red
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 1px;
+  display: flex;
+  text-align: center;
 }
 
 .divleft {
@@ -532,4 +524,16 @@ background-color: red
 }
 .divright {
   background-color: rgb(214, 228, 193)
+}
+
+.price {
+  text-align: center;
+  font-weight: bold;
+  font-size: 35px;
+}
+
+.featured article {
+  border: solid black 2px;
+  margin: 0px 50px 0px 50px;
+  height: 500px;
 }
